# tj-engine

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
android/: AndroidManifest.xml  build.gradle  local.properties  proguard-rules.pro
android/app/src/main/java/com/tj/engine/: DeviceInfo.java
android/res/values/: strings.xml
assets/: test.json  test.xml
game/: main.cpp  pch.hpp
game/core/: engine.cpp  engine.h
game/ecs/: animation.hpp  camera.cpp  camera.h  game_object.cpp  game_object.h  game_object.hpp
game/input/: joystick.cpp  joystick.h
game/input/mobile/: joystick.h
game/ui/: health_bar.hpp
game/utils/: assets_mannager.hpp  debug.hpp  platform_utils.hpp
game/window/: window_manager.cpp  window_manager.h  window_manager.hpp
include/: pch.h
include/components/: Component.h  GameObject.h  SpriteComponent.h
include/core/: Engine.h  Scene.h  SceneManager.h
include/ecs/: GameObject.h  camera.h
include/math/: Mathf.h  Random.h
include/sys/: SystemInfo.h
include/utils/: AssetsManager.h  FileHandler.h  Mathf.h  PlatformUtility.h  assets_manager.h  assets_mannager.h  debug.h  math_utils.h  platform_utils.h
settings/windows/: icon.rc
src/: main.cpp
src/core/: Engine.cpp  Scene.cpp  SceneManager.cpp
src/ecs/: camera.cpp
src/sys/: SystemInfo.cpp  system_info.cpp
src/sys/android/: SystemInfoAndroid.cpp  sys_android.cpp
src/sys/ios/: SystemInfoIOS.mm
src/sys/web/: SystemInfoWeb.cpp
src/sys/windows/: SystemInfoWindows.cpp
src/utils/: AssetsManager.cpp  FileHandler.cpp  PlatformUtility.cpp  TinyXml.cpp  assets_mannager.cpp  debug.cpp  platform_utils.cpp
